# app_shift_project

./: README.md
evrone-fastapi/: pyproject.toml  sql_app.db
evrone-fastapi/evrone_fastapi/service/: main.py
evrone-fastapi/evrone_fastapi/service/routers/: users.py
